sort all tickets descending by default

--- a/helpdesk/templates/helpdesk/ticket.html
+++ b/helpdesk/templates/helpdesk/ticket.html
@@ -182,10 +182,11 @@ Best wishes,
                             {% endif %}
                         </dl>
 
-                        <p id='ShowFurtherOptPara'><button type="button" class="btn btn-warning btn-sm" id='ShowFurtherEditOptions'>{% trans "Change Further Details &raquo;" %}</button></p>
 
-                        <div id='FurtherEditOptions' style='display: none;'>
-
+                        <div id='FurtherEditOptions' >
+<div class="row">
+    <div class="col col-4"></div>
+</div>
                             <dl>
 
                                 <dt><label for='id_title'>{% trans "Title" %}</label></dt>
