--- a/helpdesk/templates/helpdesk/ticket_list.html
+++ b/helpdesk/templates/helpdesk/ticket_list.html
@@ -366,6 +366,7 @@
                 },
                 dom: 'ltBp',
                 buttons: ["colvis"],
+                order: [[1, 'asc']],
                 columns: [
                     {
                         data: "id",
@@ -486,4 +487,3 @@
         })
     </script>
 {% endblock %}
-
