sort all tickets descending by default

--- a/helpdesk/templates/helpdesk/ticket_list.html
+++ b/helpdesk/templates/helpdesk/ticket_list.html
@@ -366,7 +366,7 @@
                 },
                 dom: 'ltBp',
                 buttons: ["colvis"],
-                order: [[1, 'asc']],
+                order: [[1, 'desc']],
                 columns: [
                     {
                         data: "id",
