--- a/helpdesk/templates/helpdesk/ticket.html
+++ b/helpdesk/templates/helpdesk/ticket.html
@@ -1,7 +1,8 @@
 {% extends "helpdesk/base.html" %}
-{% load i18n bootstrap4form humanize %}
+{% load i18n bootstrap5 humanize %}
 {% load static %}
 {% load helpdesk_tags %}
+
 
 
 {% block helpdesk_title %}{{ ticket.queue.slug }}-{{ ticket.id }} : {% trans "View Ticket Details" %}{% endblock %}
@@ -23,7 +24,7 @@
         <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     {% endif %}
 
-    {% include "helpdesk/ticket_desc_table.html" %}
+    <!--    {% include "helpdesk/ticket_desc_table.html" %}
 
     {% if ticket.merged_to %}
         <div class="card card-body bg-light">
@@ -66,30 +67,30 @@
                                 {% endif %}
                                 </p>
                                 <!--- ugly long test to suppress the following if it will be empty, to save vertical space -->
-                                {% with possible=helpdesk_settings.HELPDESK_SHOW_EDIT_BUTTON_FOLLOW_UP %}
-                                    {% if  possible and followup.user and request.user == followup.user and not followup.ticketchange_set.all or  possible and user.is_superuser and helpdesk_settings.HELPDESK_SHOW_DELETE_BUTTON_SUPERUSER_FOLLOW_UP %}
-                                        <small>
-                                            {% if helpdesk_settings.HELPDESK_SHOW_EDIT_BUTTON_FOLLOW_UP %}
-                                                {% if followup.user and request.user == followup.user and not followup.ticketchange_set.all %}
-                                                    <a href="{% url 'helpdesk:followup_edit' ticket.id followup.id %}" class='followup-edit'><button type="button" class="btn btn-warning btn-sm float-right"><i class="fas fa-edit"></i></button></a>
-                                                {% endif %}
-                                            {% endif %}
-                                            {% if user.is_superuser and helpdesk_settings.HELPDESK_SHOW_DELETE_BUTTON_SUPERUSER_FOLLOW_UP %}
-                                                <a href="{% url 'helpdesk:followup_delete' ticket.id followup.id %}" class='followup-edit'><button type="button" class="btn btn-warning btn-sm float-right"><i class="fas fa-trash"></i></button></a>
-                                            {% endif %}
-                                        </small>
-                                    {% endif %}{% endwith %}
-                            </div>
-                            <!-- /.list-group-item -->
-                        {% endfor %}
-                    </div>
-                    <!-- /.list-group -->
-                </div>
-                <!-- /.card-body -->
-            </div>
-            <!-- /.card -->
+        {% with possible=helpdesk_settings.HELPDESK_SHOW_EDIT_BUTTON_FOLLOW_UP %}
+            {% if  possible and followup.user and request.user == followup.user and not followup.ticketchange_set.all or  possible and user.is_superuser and helpdesk_settings.HELPDESK_SHOW_DELETE_BUTTON_SUPERUSER_FOLLOW_UP %}
+                <small>
+                    {% if helpdesk_settings.HELPDESK_SHOW_EDIT_BUTTON_FOLLOW_UP %}
+                        {% if followup.user and request.user == followup.user and not followup.ticketchange_set.all %}
+                            <a href="{% url 'helpdesk:followup_edit' ticket.id followup.id %}" class='followup-edit'><button type="button" class="btn btn-warning btn-sm float-right"><i class="fas fa-edit"></i></button></a>
+                        {% endif %}
+                    {% endif %}
+                    {% if user.is_superuser and helpdesk_settings.HELPDESK_SHOW_DELETE_BUTTON_SUPERUSER_FOLLOW_UP %}
+                        <a href="{% url 'helpdesk:followup_delete' ticket.id followup.id %}" class='followup-edit'><button type="button" class="btn btn-warning btn-sm float-right"><i class="fas fa-trash"></i></button></a>
+                    {% endif %}
+                </small>
+            {% endif %}{% endwith %}
+        </div>
+        <!-- /.list-group-item -->
+    {% endfor %}
+        </div>
+        <!-- /.list-group -->
+        </div>
+        <!-- /.card-body -->
+        </div>
+        <!-- /.card -->
 
-        {% endif %}
+    {% endif %}
 
         <div class="card mb-3">
             <div class="card-header">{% trans "Respond to this ticket" %}</div>
@@ -106,15 +107,15 @@
                             {% endif %}
 
 
-{% user_from_submitter ticket.submitter_email as submitter_user  %}
-{% get_django_setting "HELPDESK_SIGNATURE" as helpdesk_signature %}
-                        
-                  
-                                <div class="row">
-                                    <div class="col-sm-12 col-md-6 p-3">
-                                
-                                <label for='public_comment'>{% trans "Message for User" %}</label>
-                         <textarea class="form-control w-100" rows="12" name="public_comment" id="public_comment">
+                            {% user_from_submitter ticket.submitter_email as submitter_user  %}
+                            {% get_django_setting "HELPDESK_SIGNATURE" as helpdesk_signature %}
+
+
+                            <div class="row">
+                                <div class="col-sm-12 col-md-6 p-3">
+
+                                    <label for='public_comment'>{% trans "Message for User" %}</label>
+                                    <textarea class="form-control w-100" rows="12" name="public_comment" id="public_comment">
 {% if submitter_user %}Hi {{ submitter_user.first_name }},{% endif %}
 
 
@@ -122,13 +123,13 @@ Best wishes,
 
 {{ user.first_name }}
 {{ helpdesk_signature}}</textarea>
-                                    </div>
-                                 <div class="col-sm-12 col-md-6 p-3">
-               
-                                <label for='private_comment'>{% trans "Comment for Ticket" %}</label>
-                        <textarea class="form-control w-100" rows="12"  name='private_comment' id='private_comment'></textarea>
-                                 </div>
                                 </div>
+                                <div class="col-sm-12 col-md-6 p-3">
+
+                                    <label for='private_comment'>{% trans "Comment for Ticket" %}</label>
+                                    <textarea class="form-control w-100" rows="12"  name='private_comment' id='private_comment'></textarea>
+                                </div>
+                            </div>
 
                             <dd class='form_help_text'>{% trans "You can insert ticket and queue details in your message. For more information, see the <a href='../../help/context/'>context help page</a>." %}</dd>
 
@@ -183,40 +184,49 @@ Best wishes,
                         </dl>
 
 
-                        <div id='FurtherEditOptions' >
-<div class="row">
-    <div class="col col-4"></div>
-</div>
-                            <dl>
 
-                                <dt><label for='id_title'>{% trans "Title" %}</label></dt>
-                                <dd><input type='text' name='title' value='{{ ticket.title|escape }}' /></dd>
+                        <div id='FurtherEditOptions'>
 
-                                <dt><label for='id_owner'>{% trans "Owner" %}</label></dt>
-                                <dd><select id='id_owner' name='owner'><option value='0'>{% trans "Unassign" %}</option>{% for u in active_users %}{% if u.id == ticket.assigned_to.id %}<option value='{{ u.id }}' selected>{{ u }}</option>{% else %}<option value='{{ u.id }}'>{{ u }}</option>{% endif %}{% endfor %}</select></dd>
+                            <div class="row">
+                                <div class="col col-4">
+                                    {% bootstrap_field form.title %}
+                                </div>
+                                <div class="col col-4">
+                                    {% bootstrap_field form.priority %}
+                                </div>
+                                <div class="col col-4">
+                                    {% bootstrap_field form.queue %}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <div class="mb-3">
+                                        <label for="id_owner" class="form-label">{% trans "Owner" %}</label>
+                                        <select id="id_owner" name="owner" class="form-select form-control">
+                                            <option value="0">{% trans "Unassign" %}</option>
+                                            {% for u in active_users %}
+                                                <option
+                                                        value="{{ u.id }}"
+                                                        class="{% if u.id == ticket.assigned_to.id or u.email == user.email %}active-option{% endif %}"
+                                                        {% if u.id == ticket.assigned_to.id or u.email == user.email %}selected{% endif %}
+                                                >
+                                                    {{ u }}
+                                                </option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
 
-                                <dt><label for='id_priority'>{% trans "Priority" %}</label></dt>
-                                <dd><select id='id_priority' name='priority'>{% for p in priorities %}{% if p.0 == ticket.priority %}<option value='{{ p.0 }}' selected='selected'>{{ p.1 }}</option>{% else %}<option value='{{ p.0 }}'>{{ p.1 }}</option>{% endif %}{% endfor %}</select></dd>
 
-                <dt><label for='id_queue'>{% trans "Queue" %}</label></dt>
-                <dd><select id='id_queue' name='queue'>{% for queue_id, queue_name in queues %}<option value='{{ queue_id }}'{% if queue_id == ticket.queue.id %} selected{% endif %}>{{ queue_name }}</option>{% endfor %}</select></dd>
-
-                                <dt><label for='id_due_date'>{% trans "Due on" %}</label></dt>
-                                <dd>{{ form.due_date }}</dd>
-
-            </dl>
-
-            <dl>
-                <dt>{{ customfields_form }}</dt>
-                            </dl>
-
+                            <div class="row">{{ customfields_form }}</div>
                         </div>
 
 
 
-        {% if helpdesk_settings.HELPDESK_ENABLE_ATTACHMENTS %}
-                        <p id='ShowFileUploadPara'><button type="button" class="btn btn-warning btn-sm" id='ShowFileUpload'>{% trans "Attach File(s) &raquo;" %}</button></p>
-        {% endif %}
+                        {% if helpdesk_settings.HELPDESK_ENABLE_ATTACHMENTS %}
+                            <p id='ShowFileUploadPara'><button type="button" class="btn btn-warning btn-sm" id='ShowFileUpload'>{% trans "Attach File(s) &raquo;" %}</button></p>
+                        {% endif %}
 
                         <div id='FileUpload' style='display: none;'>
 
@@ -261,17 +271,17 @@ Best wishes,
         $(document).ready(function() {
 
 
-        const $textarea = $('#public_comment');
-        const initialContent = $textarea.val().trim(); // Store the initial content
+            const $textarea = $('#public_comment');
+            const initialContent = $textarea.val().trim(); // Store the initial content
 
-        // On form submit, check if the content has been modified
-        $textarea.closest('form').on('submit', function () {
-            const currentContent = $textarea.val().trim();
-            if (currentContent === initialContent) {
-                // If unchanged, remove the name attribute to exclude from submission
-                $textarea.removeAttr('name');
-            }
-        });
+            // On form submit, check if the content has been modified
+            $textarea.closest('form').on('submit', function () {
+                const currentContent = $textarea.val().trim();
+                if (currentContent === initialContent) {
+                    // If unchanged, remove the name attribute to exclude from submission
+                    $textarea.removeAttr('name');
+                }
+            });
 
 
             $("#ShowFurtherEditOptions").click(function() {
@@ -306,28 +316,28 @@ Best wishes,
 
             $("[data-toggle=tooltip]").tooltip();
 
-      {% if helpdesk_settings.HELPDESK_ENABLE_ATTACHMENTS %}
-      $("#ShowFileUpload").click(function() {
-          $("#FileUpload").fadeIn();
-          $("#ShowFileUploadPara").hide();
-      });
+            {% if helpdesk_settings.HELPDESK_ENABLE_ATTACHMENTS %}
+                $("#ShowFileUpload").click(function() {
+                    $("#FileUpload").fadeIn();
+                    $("#ShowFileUploadPara").hide();
+                });
 
-            // lists for file input change events, then updates the associated text label
-            // with the file name selected
-            $('.add_file_fields_wrap').on('fileselect', ':file', function(event, numFiles, label, browseButtonNum) {
-                $("#selectedfilename"+browseButtonNum).html(label);
-            });
+                // lists for file input change events, then updates the associated text label
+                // with the file name selected
+                $('.add_file_fields_wrap').on('fileselect', ':file', function(event, numFiles, label, browseButtonNum) {
+                    $("#selectedfilename"+browseButtonNum).html(label);
+                });
 
-            var x = 0;
-            var wrapper         = $(".add_file_fields_wrap"); //Fields wrapper
-            var add_button      = $(".add_file_field_button"); //Add button ID
+                var x = 0;
+                var wrapper         = $(".add_file_fields_wrap"); //Fields wrapper
+                var add_button      = $(".add_file_field_button"); //Add button ID
 
-            $(add_button).click(function(e){ //on add input button click
-                x++;
-                e.preventDefault();
-                $(wrapper).append("<div><label class='btn btn-primary btn-sm btn-file'>Browse... <input type='file' name='attachment' id='file" + x + "' multiple style='display: none;'/></label><span>&nbsp;</span><span id='selectedfilename" + x + "'>{% trans 'No files selected.' %}</span></div>"); //add input box
-            });
-      {% endif %}
+                $(add_button).click(function(e){ //on add input button click
+                    x++;
+                    e.preventDefault();
+                    $(wrapper).append("<div><label class='btn btn-primary btn-sm btn-file'>Browse... <input type='file' name='attachment' id='file" + x + "' multiple style='display: none;'/></label><span>&nbsp;</span><span id='selectedfilename" + x + "'>{% trans 'No files selected.' %}</span></div>"); //add input box
+                });
+            {% endif %}
         });
 
         // this function listens for changes on any file input, and
