--- a/helpdesk/templates/helpdesk/dashboard.html
+++ b/helpdesk/templates/helpdesk/dashboard.html
@@ -22,11 +22,11 @@
     </div>
 </div>
 
-{% if all_tickets_reported_by_current_user %}
-{% trans "All Tickets submitted by you" as ticket_list_caption %}
-{% trans "atrbcu_page" as page_var %}
-{% include 'helpdesk/include/tickets.html' with ticket_list=all_tickets_reported_by_current_user ticket_list_empty_message="" page_var=page_var %}
-{% endif %}
+{#{% if all_tickets_reported_by_current_user %}#}
+{#{% trans "All Tickets submitted by you" as ticket_list_caption %}#}
+{#{% trans "atrbcu_page" as page_var %}#}
+{#{% include 'helpdesk/include/tickets.html' with ticket_list=all_tickets_reported_by_current_user ticket_list_empty_message="" page_var=page_var %}#}
+{#{% endif %}#}
 
 {% trans "Open Tickets assigned to you (you are working on this ticket)" as ticket_list_caption %}
 {% trans "You have no tickets assigned to you." as no_assigned_tickets %}
